<resources>
    <string name="app_name">Application</string>
    <string name="Settings">Settings</string>
    <string name="Main">AppMain</string>
    <string name="X">X</string>
    <string name="Y">Y</string>
    <string name="Z">Z</string>
    <string name="proxText">proxText</string>
    <string name="seekbarView">seekbarView</string>
    <string name="testSound">Test Sound</string>
    <string name="lightsensText">lightsensText</string>
    <string name="Sensors">Sensors</string>
    <string name="cm">cm</string>
    <string name="Proximity">Proximity</string>
    <string name="m_s2">m/s^2</string>
    <string name="Accelerometer">Accelerometer</string>
    <string name="the_app_is_ready_to_start">The app is ready to start!</string>
    <string name="start_now">START NOW!</string>
    <string name="settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="light">Light</string>
    <string name="exit">Exit</string>
    <string name="android_settings">Android Settings</string>
    <string name="menu">Menu</string>
    <string name="y_axis_limit">Y-axis_limit</string>
    <string name="z_axis_limit">Z-axis_limit</string>
    <string name="save_changes">Save Changes</string>
    <string name="checkbox">CheckBox</string>
    <string name="blindlight_is_ready_to_start">BlindLight is ready to start!</string>
    <string name="app_name1">BlindLight</string>
    <string name="light_sensor">Light Sensor</string>
    <string name="lx">lx</string>
    <string name="m_s_2">m/s^2</string>
    <string name="select_min_threshold">Select Min Threshold</string>
    <string name="select_max_threshold">Select Max Threshold</string>
    <string name="select_max_light_threshold">Select max light threshold</string>
    <string name="select_min_light_threshold">Select min light threshold</string>
    <string name="press_here_to_enable_disable_proximity_sensor">press_here_to_enable_disable_proximity_sensor</string>
    <string name="accelerometer_sensor">Accelerometer Sensor:</string>
    <string name="proximity_sensor">Proximity Sensor:</string>
    <string name="lightsensor">Light Sensor:</string>
</resources>