<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:label="@string/Settings"
    tools:context="com.example.aggel.accelerometerapplication.SettingsActivity">


<<<<<<< HEAD
    <TextView
        android:text="Volume"
        android:textSize="30sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

=======
>>>>>>> origin/master
    <Button
        android:text="@string/testSound"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="italic"
        android:background="?attr/colorAccent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
<<<<<<< HEAD
        android:layout_marginBottom="64dp"
        android:layout_above="@+id/textView"
=======
        android:layout_alignParentTop="true"
>>>>>>> origin/master
        android:layout_centerHorizontal="true" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:max="10"
        android:progress="2"
<<<<<<< HEAD
        android:layout_marginTop="12dp"
        android:layout_below="@+id/textView"
=======
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_marginTop="37dp" />

    <TextView
        android:text="@string/seekbarView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekbarView"
        android:layout_below="@+id/button"
>>>>>>> origin/master
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/y_axis_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar"
        android:layout_alignParentStart="true"
        android:layout_marginTop="51dp"
        android:id="@+id/seekbarView2" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekbarView2"
        android:layout_marginTop="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:id="@+id/seekBar2"
        android:max="10"
        android:progress="2" />

    <TextView
        android:text="@string/z_axis_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar2"
        android:layout_alignEnd="@+id/seekbarView2"
        android:layout_marginTop="59dp"
        android:id="@+id/seekbarView3" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekbarView3"
        android:layout_marginTop="51dp"
        android:id="@+id/seekBar3"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:max="10"
        android:progress="2" />


</RelativeLayout>
